--- a/test.ipynb
+++ b/test.ipynb
@@ -5,13 +5,20 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T06:12:08.980763200Z",
-     "start_time": "2023-05-06T06:12:07.777938100Z"
+     "end_time": "2023-05-09T05:11:23.337177900Z",
+     "start_time": "2023-05-09T05:11:18.955661700Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "import matplotlib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,6 +30,7 @@
     "# %matplotlib inline\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.decomposition import NMF\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.svm import SVC\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,14 +41,28 @@
     "from sklearn.utils import Bunch\n",
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
+    "from sklearnex import patch_sklearn\n",
     "from skimage.io import imread\n",
     "from skimage.transform import resize\n",
     "from skimage.transform import resize as imresize\n",
     "\n",
+    "from load_data import LOAD_IMAGE\n",
+    "\n",
+    "patch_sklearn()\n",
+    "\n",
     "REAL_IMAG = True\n",
-    "NO_NMF = False"
+    "NO_NMF = False\n",
+    "is_NMF = False\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 数据加载部分"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -61,98 +83,19 @@
       "3 8\n",
       "4 9\n",
       "fucked\n",
-      "Data load done in 204.128s\n"
+      "Data load done in 244.746s\n"
      ]
     }
    ],
    "source": [
     "# load data\n",
-    "# def Angle(data):\n",
-    "#     ans = []\n",
-    "#     for i in data:\n",
-    "#         # x=np.arctan(np.imag(i)/np.real(i))\n",
-    "#         # ans.append(np.arctan(np.imag(i)/np.real(i)))\n",
-    "#         ans.append(np.angle(i))\n",
-    "#     return ans\n",
-    "\n",
-    "\n",
-    "# Load images in structured directory like it's sklearn sample dataset\n",
-    "def load_image_files(container_path, dimension=(64, 64)):  # 调整图片的尺寸为dimension=(64, 64)\n",
-    "\n",
-    "    image_dir = Path(container_path)\n",
-    "    # folders is the list of folders each conains a category of data\n",
-    "    folders = [directory for directory in image_dir.iterdir() if directory.is_dir()]\n",
-    "    # _______________________________________________________\n",
-    "    # 去掉annotations文件夹\n",
-    "    # folders = folders[:-1]\n",
-    "    # _______________________________________________________\n",
-    "    categories = [fo.name for fo in folders]\n",
-    "\n",
-    "    descr = \"A image classification dataset\"\n",
-    "    images = []\n",
-    "    flat_data = []\n",
-    "    target = []\n",
-    "\n",
-    "    for i, direc in enumerate(folders):\n",
-    "        # print(i)\n",
-    "        print(i, categories[i])\n",
-    "        # print(direc)\n",
-    "        for file in direc.iterdir():\n",
-    "            mat_data = sciio.loadmat(file)\n",
-    "            # img = np.abs(mat_data['frame_Ev'])\n",
-    "            raw_data = []\n",
-    "            if REAL_IMAG:\n",
-    "                # raw_data.extend(np.real(mat_data['frame_Ev']).flatten())\n",
-    "                # raw_data.extend(np.imag(mat_data['frame_Ev']).flatten())\n",
-    "                # raw_data.extend(np.real(mat_data['frame_Eh']).flatten())\n",
-    "                # raw_data.extend(np.imag(mat_data['frame_Eh']).flatten())\n",
-    "                # raw_data = np.abs(raw_data)\n",
-    "                raw_data.extend(np.abs(mat_data['frame_Ev']).flatten())\n",
-    "                # raw_data.extend((np.angle(mat_data['frame_Ev'].flatten())))\n",
-    "                raw_data.extend(((np.angle(mat_data['frame_Ev'].flatten()) / np.pi + 1) * 100))\n",
-    "                raw_data.extend(np.abs(mat_data['frame_Eh'].flatten()))\n",
-    "                # raw_data.extend((np.angle(mat_data['frame_Eh']).flatten()))\n",
-    "                raw_data.extend(((np.angle(mat_data['frame_Eh'].flatten()) / np.pi + 1) * 100))\n",
-    "                # print(Angle(mat_data['frame_Ev'].flatten()))\n",
-    "                # break\n",
-    "            else:\n",
-    "                raw_data.extend(np.abs(mat_data['frame_Ev']).flatten())\n",
-    "                raw_data.extend(np.abs(mat_data['frame_Eh']).flatten())\n",
-    "            flat_data.append(raw_data)\n",
-    "            # images.append(img)\n",
-    "            target.append(categories[i])\n",
-    "        # break\n",
-    "    # return [flat_data,target,categories,descr]\n",
-    "    flat_data = np.array(flat_data)\n",
-    "    target = np.array(target)\n",
-    "    return Bunch(data=flat_data,\n",
-    "                 target=target,\n",
-    "                 target_names=categories,\n",
-    "                 DESCR=descr)\n",
-    "\n",
-    "\n",
-    "def LOAD_IMAGE():\n",
-    "    image_dataset1 = load_image_files('.\\dataRCS')\n",
-    "    image_dataset2 = load_image_files('.\\dataRCS2')\n",
-    "    # flat_data = np.concatenate([image_dataset1.data, image_dataset2.data])\n",
-    "    # target = np.concatenate([image_dataset1.target, image_dataset2.target])\n",
-    "    # categories = np.concatenate([image_dataset1.categories, image_dataset2.categories])\n",
-    "    # descr = image_dataset1.descr\n",
-    "    categories = image_dataset1.target_names\n",
-    "    categories.extend(image_dataset2.target_names)\n",
-    "    print(\"fucked\")\n",
-    "    return Bunch(data=np.concatenate([image_dataset1.data, image_dataset2.data]),\n",
-    "                 target=np.concatenate([image_dataset1.target, image_dataset2.target]),\n",
-    "                 target_names=categories,\n",
-    "                 DESCR=image_dataset1.DESCR)\n",
-    "\n",
     "\n",
     "# ----KC501-----\n",
     "# image_dataset = load_image_files('/home/kc501/LJY/Alexnet/dataRCS')\n",
     "\n",
     "# ----ICraft----\n",
     "t_load_data = time()\n",
-    "image_dataset = LOAD_IMAGE()\n",
+    "image_dataset = LOAD_IMAGE(REAL_IMAG)\n",
     "# image_dataset1 = load_image_files('.\\dataRCS')\n",
     "# image_dataset2 = load_image_files('.\\dataRCS2')\n",
     "# # flat_data = np.concatenate([image_dataset1.data, image_dataset2.data])\n",
@@ -172,9 +115,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-06T06:15:35.175361400Z",
-     "start_time": "2023-05-06T06:12:11.032798200Z"
+     "end_time": "2023-05-09T05:15:30.607757100Z",
+     "start_time": "2023-05-09T05:11:25.854448Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 数据集划分部分"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -182,8 +134,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T06:16:48.706692700Z",
-     "start_time": "2023-05-06T06:16:45.582764800Z"
+     "end_time": "2023-05-09T05:15:41.462137100Z",
+     "start_time": "2023-05-09T05:15:40.017433600Z"
     }
    },
    "outputs": [],
@@ -194,70 +146,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "# NMF降维模块"
+   ],
    "metadata": {
-    "is_executing": true,
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:25:13.870950Z"
+     "end_time": "2023-05-09T05:16:17.062736800Z",
+     "start_time": "2023-05-09T05:15:53.919993900Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "violation: 1.0\n",
-      "violation: 0.415232152475027\n",
-      "violation: 0.328275720935333\n",
-      "violation: 0.2951128614168521\n",
-      "violation: 0.277334130957208\n",
-      "violation: 0.26375973425707244\n",
-      "violation: 0.25296562881321866\n",
-      "violation: 0.24296488353214923\n",
-      "violation: 0.23429389003810752\n",
-      "violation: 0.22590803163311945\n",
-      "violation: 0.2197988908177308\n",
-      "violation: 0.2123233367838285\n",
-      "violation: 0.2067661630929283\n",
-      "violation: 0.20138332464104772\n",
-      "violation: 0.1965566504981698\n",
-      "violation: 0.1921939186915778\n",
-      "violation: 0.18907546876511871\n",
-      "violation: 0.18585473916377004\n",
-      "violation: 0.18192699880398835\n",
-      "violation: 0.1783070432938446\n",
-      "violation: 0.17511291781779498\n",
-      "violation: 0.17186517096743695\n",
-      "violation: 0.16868705698433914\n",
-      "violation: 0.16572006188846636\n",
-      "violation: 0.1627726645838626\n",
-      "violation: 0.1595327704458579\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n_components = 100\n",
+    "n_components = 10\n",
     "tolerance = 1e-2\n",
     "max_iteration = 10000\n",
     "if not NO_NMF:\n",
     "    t_NMF = time()\n",
-    "    nmf = NMF(n_components=n_components, init='nndsvd', tol=tolerance, max_iter=max_iteration, verbose=True).fit(\n",
-    "        X_train)\n",
-    "    # W = nmf.components_.reshape((n_components, 64, 64))\n",
-    "\n",
+    "    if is_NMF:\n",
+    "        # nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(X_train)\n",
+    "        nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(\n",
+    "            image_dataset.data)\n",
+    "        print(\"NMF done in %0.3fs\" % (time() - t_NMF))\n",
+    "    else:\n",
+    "        # nmf=PCA(n_components).fit(X_train)\n",
+    "        nmf = PCA(n_components).fit(image_dataset.data)\n",
+    "        print(\"PCA done in %0.3fs\" % (time() - t_NMF))\n",
     "    X_train_nmf = nmf.transform(X_train)\n",
-    "    X_test_nmf = nmf.transform(X_test)\n",
-    "    print(\"NMF done in %0.3fs\" % (time() - t_NMF))"
+    "    X_test_nmf = nmf.transform(X_test)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# SVM训练模块\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T11:20:58.554417300Z",
-     "start_time": "2023-05-06T11:20:55.516491400Z"
+     "end_time": "2023-05-09T05:17:14.106790800Z",
+     "start_time": "2023-05-09T05:17:12.567532700Z"
     }
    },
    "outputs": [
@@ -265,26 +206,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM done in 0.000s\n",
-      "[LibSVM]n_components:  20\n",
-      "Acc on train data:0.9585\n",
-      "Acc on test data:0.238\n"
+      "[LibSVM]SVM done in 1.349s\n",
+      "n_components:  10\n",
+      "Acc on train data:0.8215\n",
+      "Acc on test data:0.242\n"
      ]
     }
    ],
    "source": [
     "f = open('./TZB.txt', 'a')\n",
     "t_train = time()\n",
-    "kernel = 'poly'\n",
-    "clf = SVC(C=1, kernel=kernel, gamma=0.01, class_weight='balanced', decision_function_shape='ovo', verbose=True)\n",
-    "print(\"SVM done in %0.3fs\" % (time() - t_train))\n",
+    "kernel = 'rbf'\n",
+    "clf = SVC(C=10000, kernel=kernel, gamma=\"scale\", class_weight='balanced', decision_function_shape='ovo', verbose=True)\n",
     "\n",
     "if NO_NMF:\n",
     "    clf = clf.fit(X_train, y_train)\n",
+    "    print(\"SVM done in %0.3fs\" % (time() - t_train))\n",
     "    y_pred_train = clf.predict(X_train)\n",
     "    y_pred_test = clf.predict(X_test)\n",
     "else:\n",
     "    clf = clf.fit(X_train_nmf, y_train)\n",
+    "    print(\"SVM done in %0.3fs\" % (time() - t_train))\n",
     "    y_pred_train = clf.predict(X_train_nmf)\n",
     "    y_pred_test = clf.predict(X_test_nmf)\n",
     "\n",
@@ -293,6 +235,7 @@
     "\n",
     "f.write(\"n_components: {}\\n\".format(n_components))\n",
     "f.write(\"kernel: {}\\n\".format(kernel))\n",
+    "f.write(\"Decomposition: {}\\n\".format(\"NMF\" if is_NMF else \"PCA\"))\n",
     "f.write(\"tolerance: {}\\n\".format(tolerance))\n",
     "f.write(\"max_iteration: {}\\n\".format(max_iteration))\n",
     "f.write(\"Acc on train data: {}\\n\".format(accuracy_score(y_true_train, y_pred_train)))\n",
@@ -307,20 +250,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-09T04:17:46.607226300Z",
+     "start_time": "2023-05-09T04:17:46.589172900Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-09T04:17:46.620183800Z",
+     "start_time": "2023-05-09T04:17:46.607226300Z"
+    }
    }
   }
  ],
