--- a/test.ipynb
+++ b/test.ipynb
@@ -5,19 +5,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-09T05:11:23.337177900Z",
-     "start_time": "2023-05-09T05:11:18.955661700Z"
+     "end_time": "2023-05-11T06:47:57.859306800Z",
+     "start_time": "2023-05-11T06:47:56.944304800Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib\n",
     "import numpy as np\n",
@@ -42,18 +34,55 @@
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearnex import patch_sklearn\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.manifold import TSNE\n",
+    "\n",
     "from skimage.io import imread\n",
     "from skimage.transform import resize\n",
     "from skimage.transform import resize as imresize\n",
     "\n",
     "from load_data import LOAD_IMAGE\n",
-    "\n",
+    "from PLOT import plot_digits\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 调参部分"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Intel(R) Extension for Scikit-learn* enabled (https://github.com/intel/scikit-learn-intelex)\n"
+     ]
+    }
+   ],
+   "source": [
     "patch_sklearn()\n",
     "\n",
     "REAL_IMAG = True\n",
     "NO_NMF = False\n",
-    "is_NMF = False\n"
-   ]
+    "is_NMF = False\n",
+    "SCALED = True\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:02:00.654599100Z",
+     "start_time": "2023-05-11T08:02:00.642614900Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -66,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -83,7 +112,7 @@
       "3 8\n",
       "4 9\n",
       "fucked\n",
-      "Data load done in 244.746s\n"
+      "Data load done in 105.099s\n"
      ]
     }
    ],
@@ -115,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-09T05:15:30.607757100Z",
-     "start_time": "2023-05-09T05:11:25.854448Z"
+     "end_time": "2023-05-11T06:49:42.984474500Z",
+     "start_time": "2023-05-11T06:47:57.875253400Z"
     }
    }
   },
@@ -131,18 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-09T05:15:41.462137100Z",
-     "start_time": "2023-05-09T05:15:40.017433600Z"
+     "end_time": "2023-05-11T08:30:05.252851800Z",
+     "start_time": "2023-05-11T08:29:56.500222800Z"
     }
    },
    "outputs": [],
    "source": [
     "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    image_dataset.data, image_dataset.target, test_size=0.2, random_state=101)"
+    "    image_dataset.data, image_dataset.target, test_size=0.2, random_state=101)\n",
+    "\n",
+    "if SCALED:\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train = scaler.fit_transform(X_train)\n",
+    "    X_test = scaler.fit_transform(X_test)"
    ]
   },
   {
@@ -156,31 +190,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-09T05:16:17.062736800Z",
-     "start_time": "2023-05-09T05:15:53.919993900Z"
+     "end_time": "2023-05-11T08:31:41.193509700Z",
+     "start_time": "2023-05-11T08:30:09.605850400Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCA done in 91.570s\n"
+     ]
+    }
+   ],
    "source": [
-    "n_components = 10\n",
+    "n_components = 0.95\n",
     "tolerance = 1e-2\n",
     "max_iteration = 10000\n",
     "if not NO_NMF:\n",
     "    t_NMF = time()\n",
     "    if is_NMF:\n",
-    "        # nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(X_train)\n",
-    "        nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(\n",
-    "            image_dataset.data)\n",
+    "        nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(X_train)\n",
+    "        # nmf = NMF(n_components=n_components, init='random', tol=tolerance, max_iter=max_iteration, verbose=True).fit(\n",
+    "        #     image_dataset.data)\n",
     "        print(\"NMF done in %0.3fs\" % (time() - t_NMF))\n",
+    "        X_train_nmf = nmf.transform(X_train)\n",
+    "        X_test_nmf = nmf.transform(X_test)\n",
     "    else:\n",
-    "        # nmf=PCA(n_components).fit(X_train)\n",
-    "        nmf = PCA(n_components).fit(image_dataset.data)\n",
+    "        nmf = PCA(n_components=n_components).fit(X_train)\n",
+    "        # nmf =  PCA(n_components).fit(image_dataset.data)\n",
+    "        # pca_tsne = Pipeline([\n",
+    "        #     ('pca', PCA(n_components=n_components)),\n",
+    "        #     ('tsne', TSNE(n_components=3))\n",
+    "        # ])\n",
+    "        # X_train_nmf = pca_tsne.fit_transform(X_train)\n",
+    "        # X_test_nmf = pca_tsne.fit_transform(X_test)\n",
+    "        X_train_nmf = nmf.transform(X_train)\n",
+    "        X_test_nmf = nmf.transform(X_test)\n",
     "        print(\"PCA done in %0.3fs\" % (time() - t_NMF))\n",
-    "    X_train_nmf = nmf.transform(X_train)\n",
-    "    X_test_nmf = nmf.transform(X_test)"
+    "        # plot_digits(X_train_nmf, y_train)\n",
+    "        # plt.show()\n"
    ]
   },
   {
@@ -194,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-09T05:17:14.106790800Z",
-     "start_time": "2023-05-09T05:17:12.567532700Z"
+     "end_time": "2023-05-11T08:40:48.283100700Z",
+     "start_time": "2023-05-11T08:40:47.635232600Z"
     }
    },
    "outputs": [
@@ -206,29 +258,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibSVM]SVM done in 1.349s\n",
-      "n_components:  10\n",
-      "Acc on train data:0.8215\n",
-      "Acc on test data:0.242\n"
+      "[LibSVM]SVM with scaled done in 0.168s\n",
+      "n_components:  0.95\n",
+      "Acc on train data:0.9375\n",
+      "Acc on test data:0.554\n"
      ]
     }
    ],
    "source": [
     "f = open('./TZB.txt', 'a')\n",
-    "t_train = time()\n",
-    "kernel = 'rbf'\n",
-    "clf = SVC(C=10000, kernel=kernel, gamma=\"scale\", class_weight='balanced', decision_function_shape='ovo', verbose=True)\n",
     "\n",
-    "if NO_NMF:\n",
-    "    clf = clf.fit(X_train, y_train)\n",
-    "    print(\"SVM done in %0.3fs\" % (time() - t_train))\n",
+    "def SVM(clf, X_train, X_test):\n",
+    "\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    print(\"SVM with scaled done in %0.3fs\" % (time() - t_train))\n",
+    "    f.write(\"SVM with scaled done in %0.3fs\\n\" % (time() - t_train))\n",
     "    y_pred_train = clf.predict(X_train)\n",
     "    y_pred_test = clf.predict(X_test)\n",
+    "    return y_pred_train, y_pred_test\n",
+    "\n",
+    "C=100\n",
+    "t_train = time()\n",
+    "kernel = 'rbf'\n",
+    "clf = SVC(C=C, kernel=kernel, gamma='scale', class_weight='balanced', decision_function_shape='ovo', verbose=True)\n",
+    "\n",
+    "if NO_NMF:\n",
+    "    y_pred_train, y_pred_test = SVM(clf, X_train, X_test)\n",
     "else:\n",
-    "    clf = clf.fit(X_train_nmf, y_train)\n",
-    "    print(\"SVM done in %0.3fs\" % (time() - t_train))\n",
-    "    y_pred_train = clf.predict(X_train_nmf)\n",
-    "    y_pred_test = clf.predict(X_test_nmf)\n",
+    "    y_pred_train, y_pred_test = SVM(clf, X_train_nmf, X_test_nmf)\n",
     "\n",
     "y_true_train = y_train\n",
     "y_true_test = y_test\n",
@@ -238,40 +295,23 @@
     "f.write(\"Decomposition: {}\\n\".format(\"NMF\" if is_NMF else \"PCA\"))\n",
     "f.write(\"tolerance: {}\\n\".format(tolerance))\n",
     "f.write(\"max_iteration: {}\\n\".format(max_iteration))\n",
+    "f.write(\"C: {}\\n\".format(C))\n",
     "f.write(\"Acc on train data: {}\\n\".format(accuracy_score(y_true_train, y_pred_train)))\n",
     "f.write(\"Acc on test data: {}\\n\".format(accuracy_score(y_true_test, y_pred_test)))\n",
     "f.write(\"------------------------------------------------------------------------------\\n\")\n",
     "f.close()\n",
     "print(\"n_components: \", n_components)\n",
     "print(\"Acc on train data:\" + str(accuracy_score(y_true_train, y_pred_train)))\n",
-    "\n",
     "print(\"Acc on test data:\" + str(accuracy_score(y_true_test, y_pred_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-09T04:17:46.607226300Z",
-     "start_time": "2023-05-09T04:17:46.589172900Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-09T04:17:46.620183800Z",
-     "start_time": "2023-05-09T04:17:46.607226300Z"
-    }
+    "collapsed": false
    }
   }
  ],
