--- a/test.ipynb
+++ b/test.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-11T06:47:57.859306800Z",
-     "start_time": "2023-05-11T06:47:56.944304800Z"
+     "end_time": "2023-05-13T09:42:35.364972500Z",
+     "start_time": "2023-05-13T09:42:34.508579900Z"
     }
    },
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -72,22 +72,22 @@
     "patch_sklearn()\n",
     "\n",
     "REAL_IMAG = True\n",
-    "NO_NMF = False\n",
+    "NO_NMF = True\n",
     "is_NMF = False\n",
     "SCALED = True\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:02:00.654599100Z",
-     "start_time": "2023-05-11T08:02:00.642614900Z"
+     "end_time": "2023-05-13T09:42:35.380337600Z",
+     "start_time": "2023-05-13T09:42:35.365969Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# 数据加载部分"
+    "    # 数据加载部分"
    ],
    "metadata": {
     "collapsed": false
@@ -112,7 +112,7 @@
       "3 8\n",
       "4 9\n",
       "fucked\n",
-      "Data load done in 105.099s\n"
+      "Data load done in 115.322s\n"
      ]
     }
    ],
@@ -144,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-11T06:49:42.984474500Z",
-     "start_time": "2023-05-11T06:47:57.875253400Z"
+     "end_time": "2023-05-13T09:44:30.759229300Z",
+     "start_time": "2023-05-13T09:42:35.380337600Z"
     }
    }
   },
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:30:05.252851800Z",
-     "start_time": "2023-05-11T08:29:56.500222800Z"
+     "end_time": "2023-05-13T09:44:39.609149700Z",
+     "start_time": "2023-05-13T09:44:30.768016200Z"
     }
    },
    "outputs": [],
@@ -190,22 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:31:41.193509700Z",
-     "start_time": "2023-05-11T08:30:09.605850400Z"
+     "end_time": "2023-05-13T09:44:39.624101100Z",
+     "start_time": "2023-05-13T09:44:39.610146900Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PCA done in 91.570s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_components = 0.95\n",
     "tolerance = 1e-2\n",
@@ -246,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:40:48.283100700Z",
-     "start_time": "2023-05-11T08:40:47.635232600Z"
+     "end_time": "2023-05-13T10:58:57.875535500Z",
+     "start_time": "2023-05-13T09:44:39.627089700Z"
     }
    },
    "outputs": [
@@ -258,10 +250,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibSVM]SVM with scaled done in 0.168s\n",
+      "[LibSVM]SVM with scaled done in 631.050s\n",
       "n_components:  0.95\n",
-      "Acc on train data:0.9375\n",
-      "Acc on test data:0.554\n"
+      "Acc on train data:0.982\n",
+      "Acc on test data:0.516\n"
      ]
     }
    ],
@@ -273,8 +265,14 @@
     "    clf.fit(X_train, y_train)\n",
     "    print(\"SVM with scaled done in %0.3fs\" % (time() - t_train))\n",
     "    f.write(\"SVM with scaled done in %0.3fs\\n\" % (time() - t_train))\n",
+    "    p_train=time()\n",
     "    y_pred_train = clf.predict(X_train)\n",
+    "    print(\"SVM(predict train) with scaled done in %0.3fs\" % (time() - p_train))\n",
+    "    f.write(\"SVM(predict train) with scaled done in %0.3fs\\n\" % (time() - p_train))\n",
+    "    p_test=time()\n",
     "    y_pred_test = clf.predict(X_test)\n",
+    "    print(\"SVM(predict test) with scaled done in %0.3fs\" % (time() - p_test))\n",
+    "    f.write(\"SVM(predict test) with scaled done in %0.3fs\\n\" % (time() - p_test))\n",
     "    return y_pred_train, y_pred_test\n",
     "\n",
     "C=100\n",
@@ -307,11 +305,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-13T10:58:57.893511300Z",
+     "start_time": "2023-05-13T10:58:57.876534Z"
+    }
    }
   }
  ],
